added updating for social project
